// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly ExpensesSummary with 1 expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
    , total: 
    $5.00
  </h3>
</div>
`;

exports[`should render correctly ExpensesSummary with 2 expenses 1`] = `
<div>
  <h3>
    Viewing 
    2
     
    expenses
    , total: 
    $50.00
  </h3>
</div>
`;
